# stFormer

./: LICENSE  README.md  pyproject.toml  setup.py
cases/signaling_ligand_identification/: format_sc.ipynb  pcc.pkl  stFormer_insilico_perturbation.ipynb
cases/spatial_domain_identification/: format_sc.ipynb  stFormer_cell_clustering.ipynb
data/: deconvolution.py  download.txt
datasets/: deconvolution.py  format_sc.ipynb  format_visium.ipynb  preprocess_rds.ipynb
pretraining/: download.txt  pretraining.py
pretraining/mse/: mse_train_human_intestine.pkl  mse_train_human_myocardial_infarction.pkl  mse_valid_human_intestine.pkl  mse_valid_human_myocardial_infarction.pkl  plot_mse.ipynb
scfoundation/: load.py
scfoundation/fine-tuning/: fine-tuning.py
scfoundation/pretrainmodels/: performer.py
stformer/: __init__.py  flash_attention.py  loss.py  model.py
stformer/tokenizer/: __init__.py  gene_tokenizer.py  ligand_database.csv  scfoundation_gene_df.csv  scfoundation_gene_vocab.json
tasks/: scFoundation_LR_classification.ipynb  scFoundation_cell_classification.ipynb  scFoundation_cell_clustering.ipynb  scFoundation_gene_classification.ipynb  stFormer_LR_classification.ipynb  stFormer_cell_classification.ipynb  stFormer_cell_clustering.ipynb  stFormer_gene_classification.ipynb  stFormer_insilico_perturbation.ipynb
tasks/fine-tuning_mse/: finetuning_scf.py  finetuning_stformer.py
tasks/gene_lists/: TGF-beta_signaling_pathway_KEGG.csv  TNFA_signaling_via_NFKB_Hallmark.csv  WNT_direct_targets_vs_housekeeping.csv  n1_network_gene_labels.csv  (+2 more)
(+36 files in other folders)
