[build-system]
requires = ["setuptools==75.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stformer"
version = "1.0"
description = "A framework for gene representation on spatial transcriptomics data"
readme = "README.md"
authors = [
    { name = "Shenghao Cao", email = "cao.shenghao@sjtu.edu.cn" }
]
requires-python = "==3.11.5"
dependencies = [
    "numpy==1.23.5",
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
    "torch==2.2.2",
    "torchtext==0.17.2",
    "anndata==0.10.4",
    "scanpy==1.9.6",
    "flash_attn==2.5.7",
    "local_attention==1.9.1",
    "tqdm==4.65.0",
    "scipy==1.12.0",
]

[project.urls]
Homepage = "https://github.com/csh3/stFormer"
Repository = "https://github.com/csh3/stFormer.git"

[tool.setuptools.packages.find]
where = ["."]